--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,6 @@
     <img src="https://images.pexels.com/photos/15239/flower-roses-red-roses-bloom.jpg?auto=compress&cs=tinysrgb&w=600" alt="rose" width="200" height="200">
 <img src="https://images.pexels.com/photos/1158961/pexels-photo-1158961.jpeg?auto=compress&cs=tinysrgb&w=600" alt="carnations" width="200" height="200">
     <img src="https://images.pexels.com/photos/1662242/pexels-photo-1662242.jpeg?auto=compress&cs=tinysrgb&w=600" alt="daisy" width="200" height="200">
-  
+  </body>
 
 </html>
