--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       } 
 
       .paragraph-1 {
-        font-family: font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  background-color: white;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  background-color: white;
       }
 
       .paragraph-2 {
@@ -49,7 +49,7 @@ th, td {
 
 table {
   border-collapse: collapse;
-  width: 50px%;
+  width: 50px;
  }
 
 td {
@@ -93,21 +93,21 @@ td {
      </ul>
     <table>
         <tr>
-          <th style="font-size:50px%">Flower</th>
+          <th style="font-size:50px">Flower</th>
           <th style="">price</th>
         </tr>
         <tr>
           <td style="">Rose</td>
-          <td style="">$4.99</td>
+          <td style="font-family:sans-serif">$4.99</td>
         </tr>
         <tr>
-          <td style="font-famly:">
+          <td style="font-famly:sans-serif">
             Sunflower
           </td>
-          <td style="">$1.99</td>
+          <td style="font-family: sans-serif;">$1.99</td>
         </tr>
       </table>
-     <button style="">Buy Now!</button>
+     <button style="font-family: sans-serif;">Buy Now!</button>
     </main>
    <footer>
       Made at codeX
