--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               color: red;
      }
       body {
-  background-color: yellow;
+    background-color: yellow;
 }
       
       ul{
@@ -60,14 +60,16 @@ td {
   float: right;
  }
   </style>
-     <nav>
+     
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body> 
+
+  <nav>
       <a> HOME </a> |
       <a> ABOUT </a> |
       <a> GALLERY </a>
     </nav>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body> 
     <header>
       <h1 class="center"style="text-decoration: underline">I love flowers!
       <div class="center"></div>
@@ -94,14 +96,14 @@ td {
     <table>
         <tr>
           <th style="font-size:50px">Flower</th>
-          <th style="">price</th>
+          <th style="font-family: sans-serif;">price</th>
         </tr>
         <tr>
-          <td style="">Rose</td>
+          <td style="font-family: sans-serif;">Rose</td>
           <td style="font-family:sans-serif">$4.99</td>
         </tr>
         <tr>
-          <td style="font-famly:sans-serif">
+          <td style="font-family:sans-serif">
             Sunflower
           </td>
           <td style="font-family: sans-serif;">$1.99</td>
